--- a/website/the-companions/5-lady-christina.html
+++ b/website/the-companions/5-lady-christina.html
@@ -11,50 +11,52 @@
 <!-- InstanceParam name="The Doctor Secondary Menu" type="boolean" value="false" -->
 <!-- InstanceParam name="Companions Secondary Menu" type="boolean" value="true" -->
 <!-- InstanceParam name="Villians secondary menu" type="boolean" value="false" -->
+<link href="../styles.css" rel="stylesheet" type="text/css">
 </head>
 
 
 <body>
-<table>
-  <tr>
-    <td colspan="2"><p>[Primary Navigation]</p></td>
-  </tr>
-  <tr>
-    <td colspan="2"><!-- InstanceBeginEditable name="Banner" --><img src="../images/banners/banner-companions.jpg" width="950" height="150" alt=""/><!-- InstanceEndEditable --></td>
-  </tr>
-  <tr>
-    <td><p>&nbsp;</p>
-      
-      <table>
-        <tr>
-          <td>Rose Tyler</td>
-        </tr>
-        <tr>
-          <td>Amy Pond</td>
-        </tr>
-        <tr>
-          <td>Martha Jones</td>
-        </tr>
-        <tr>
-          <td>Jack Harness</td>
-        </tr>
-        <tr>
-          <td>Lady Christina de Souza</td>
-        </tr>
-        <tr>
-          <td>Rory Williams</td>
-        </tr>
-        <tr>
-          <td>River Song</td>
-        </tr>
-        <tr>
-          <td>Clara Oswald</td>
-        </tr>
-      </table>
-    </td>
-    <td>
-    <div class="doctor-who-content">
-	<!-- InstanceBeginEditable name="Content Area" -->
+<div class="wrapper">
+  <table width="950">
+    <tr>
+      <td colspan="2"><p><a href="../about-the-doctor.html">Home </a><a href="../the-doctors/index.html">The Doctors</a> <a href="index.html">Companions</a> <a href="../the-villans/index.html">Villians</a></p></td>
+    </tr>
+    <tr>
+      <td colspan="2"><!-- InstanceBeginEditable name="Banner" --><img src="../images/banners/banner-companions.jpg" width="950" height="150" alt=""/><!-- InstanceEndEditable --></td>
+    </tr>
+    <tr>
+      <td><p>&nbsp;</p>
+        
+        <table>
+          <tr>
+            <td><a href="1-rose-tyler.html">Rose Tyler</a></td>
+          </tr>
+          <tr>
+            <td><a href="2-amy-pond.html">Amy Pond</a></td>
+          </tr>
+          <tr>
+            <td><a href="3-martha-jones.html">Martha Jones</a></td>
+          </tr>
+          <tr>
+            <td><a href="4-jack-harness.html">Jack Harness</a></td>
+          </tr>
+          <tr>
+            <td><a href="5-lady-christina.html">Lady Christina de Souza</a></td>
+          </tr>
+          <tr>
+            <td><a href="6-rory-williams.html">Rory Williams</a></td>
+          </tr>
+          <tr>
+            <td><a href="7-river-song.html">River Song</a></td>
+          </tr>
+          <tr>
+            <td><a href="8-clara-oswald.html">Clara Oswald</a></td>
+          </tr>
+        </table>
+      </td>
+      <td>
+        <div class="doctor-who-content">
+          <!-- InstanceBeginEditable name="Content Area" -->
       <h1>Lady Christina de Souza</h1>
       <p>Portrayed by <b>Michelle Ryan</b></p>
       <p><img src="../images/the-companions/lady-christina.jpg" width="300" height="300" alt=""/>Lady Christina de Souza was a friend of the Tenth and Eleventh Doctors, and had brief adventures with them both. A minor member of the British aristocracy, she was also a thief and an adrenaline junkie. Her exploits were well-publicised — at least in Britain — allowing Rory Williams to recognise her on sight.<br>
@@ -63,9 +65,10 @@
         </p>
       <p>Christina was fiercely independent and enjoyed defying the Doctor's wishes. She was an expert thief, but only stole for the adrenaline rush. She was bored by her aristocratic life and had a high opinion of herself. She used her obvious charms and good looks to win people over, often for selfish reasons. She showed great enthusiasm for joining the Doctor on his travels, but quickly forgave him when he refused. She could also speak French fluently, which amused the Doctor. She had an untrustworthy streak in her; she abandoned her partner in crime, who was probably also her lover, when he was caught by guards during her escape from the museum. Despite that, she was kind enough to give the cup over to save lives. </p>
     <!-- InstanceEndEditable -->
-   </div class="doctor-who-content"> 
-    </td>
-  </tr>
-</table>
+        </div class="doctor-who-content"> 
+      </td>
+    </tr>
+  </table>
+</div>
 </body>
 <!-- InstanceEnd --></html>
