--- a/website/the-companions/8-clara-oswald.html
+++ b/website/the-companions/8-clara-oswald.html
@@ -11,50 +11,52 @@
 <!-- InstanceParam name="The Doctor Secondary Menu" type="boolean" value="false" -->
 <!-- InstanceParam name="Companions Secondary Menu" type="boolean" value="true" -->
 <!-- InstanceParam name="Villians secondary menu" type="boolean" value="false" -->
+<link href="../styles.css" rel="stylesheet" type="text/css">
 </head>
 
 
 <body>
-<table>
-  <tr>
-    <td colspan="2"><p>[Primary Navigation]</p></td>
-  </tr>
-  <tr>
-    <td colspan="2"><!-- InstanceBeginEditable name="Banner" --><img src="../images/banners/banner-companions.jpg" width="950" height="150" alt=""/><!-- InstanceEndEditable --></td>
-  </tr>
-  <tr>
-    <td><p>&nbsp;</p>
-      
-      <table>
-        <tr>
-          <td>Rose Tyler</td>
-        </tr>
-        <tr>
-          <td>Amy Pond</td>
-        </tr>
-        <tr>
-          <td>Martha Jones</td>
-        </tr>
-        <tr>
-          <td>Jack Harness</td>
-        </tr>
-        <tr>
-          <td>Lady Christina de Souza</td>
-        </tr>
-        <tr>
-          <td>Rory Williams</td>
-        </tr>
-        <tr>
-          <td>River Song</td>
-        </tr>
-        <tr>
-          <td>Clara Oswald</td>
-        </tr>
-      </table>
-    </td>
-    <td>
-    <div class="doctor-who-content">
-	<!-- InstanceBeginEditable name="Content Area" -->
+<div class="wrapper">
+  <table width="950">
+    <tr>
+      <td colspan="2"><p><a href="../about-the-doctor.html">Home </a><a href="../the-doctors/index.html">The Doctors</a> <a href="index.html">Companions</a> <a href="../the-villans/index.html">Villians</a></p></td>
+    </tr>
+    <tr>
+      <td colspan="2"><!-- InstanceBeginEditable name="Banner" --><img src="../images/banners/banner-companions.jpg" width="950" height="150" alt=""/><!-- InstanceEndEditable --></td>
+    </tr>
+    <tr>
+      <td><p>&nbsp;</p>
+        
+        <table>
+          <tr>
+            <td><a href="1-rose-tyler.html">Rose Tyler</a></td>
+          </tr>
+          <tr>
+            <td><a href="2-amy-pond.html">Amy Pond</a></td>
+          </tr>
+          <tr>
+            <td><a href="3-martha-jones.html">Martha Jones</a></td>
+          </tr>
+          <tr>
+            <td><a href="4-jack-harness.html">Jack Harness</a></td>
+          </tr>
+          <tr>
+            <td><a href="5-lady-christina.html">Lady Christina de Souza</a></td>
+          </tr>
+          <tr>
+            <td><a href="6-rory-williams.html">Rory Williams</a></td>
+          </tr>
+          <tr>
+            <td><a href="7-river-song.html">River Song</a></td>
+          </tr>
+          <tr>
+            <td><a href="8-clara-oswald.html">Clara Oswald</a></td>
+          </tr>
+        </table>
+      </td>
+      <td>
+        <div class="doctor-who-content">
+          <!-- InstanceBeginEditable name="Content Area" -->
       <h1>Clara Oswald</h1>
       <p>Portrayed by <b>Jenna Colemann</b></p>
       <p><img src="../images/the-companions/clara-oswald.jpg" width="300" height="300" alt=""/>Clara Oswald was a companion to the Eleventh Doctor. According to the Doctor, Clara was simply &quot;not possible&quot;. Though assured by the eminent empathic psychic Emma Grayling and the TARDIS scanner that Clara was just an &quot;ordinary girl&quot;, the Doctor couldn't believe that to be true and thought her to be &quot;the only mystery worth solving&quot;.<br>
@@ -63,9 +65,10 @@
         </p>
       <p>Clara had close relationships with her mother and father and kept the leaf that had started their relationship for many years after her mother's death, as a memento of their time together. The leaf was very precious to Clara, because, if not for it landing on her father's face many years earlier, he wouldn't have met her mother. Clara gave up both the leaf and her mother's ring in order to defeat the Old God, although she later got the ring back. This shows her selflessness and great strength of character as she was willing to give up two things that were extremely important to her in order to save others. She showed that she was more selfless than the Doctor, who was unwilling to give up his Sonic Screwdriver, even though he could have received another from the TARDIS.</p>
     <!-- InstanceEndEditable -->
-   </div class="doctor-who-content"> 
-    </td>
-  </tr>
-</table>
+        </div class="doctor-who-content"> 
+      </td>
+    </tr>
+  </table>
+</div>
 </body>
 <!-- InstanceEnd --></html>
