--- a/website/the-companions/index.html
+++ b/website/the-companions/index.html
@@ -10,50 +10,52 @@
 <!-- InstanceParam name="The Doctor Secondary Menu" type="boolean" value="false" -->
 <!-- InstanceParam name="Companions Secondary Menu" type="boolean" value="true" -->
 <!-- InstanceParam name="Villians secondary menu" type="boolean" value="false" -->
+<link href="../styles.css" rel="stylesheet" type="text/css">
 </head>
 
 
 <body>
-<table>
-  <tr>
-    <td colspan="2"><p>[Primary Navigation]</p></td>
-  </tr>
-  <tr>
-    <td colspan="2"><!-- InstanceBeginEditable name="Banner" --><img src="../images/banners/banner-companions.jpg" width="950" height="150" alt=""/><!-- InstanceEndEditable --></td>
-  </tr>
-  <tr>
-    <td><p>&nbsp;</p>
-      
-      <table>
-        <tr>
-          <td>Rose Tyler</td>
-        </tr>
-        <tr>
-          <td>Amy Pond</td>
-        </tr>
-        <tr>
-          <td>Martha Jones</td>
-        </tr>
-        <tr>
-          <td>Jack Harness</td>
-        </tr>
-        <tr>
-          <td>Lady Christina de Souza</td>
-        </tr>
-        <tr>
-          <td>Rory Williams</td>
-        </tr>
-        <tr>
-          <td>River Song</td>
-        </tr>
-        <tr>
-          <td>Clara Oswald</td>
-        </tr>
-      </table>
-    </td>
-    <td>
-    <div class="doctor-who-content">
-	<!-- InstanceBeginEditable name="Content Area" -->
+<div class="wrapper">
+  <table width="950">
+    <tr>
+      <td colspan="2"><p><a href="../about-the-doctor.html">Home </a><a href="../the-doctors/index.html">The Doctors</a> <a href="index.html">Companions</a> <a href="../the-villans/index.html">Villians</a></p></td>
+    </tr>
+    <tr>
+      <td colspan="2"><!-- InstanceBeginEditable name="Banner" --><img src="../images/banners/banner-companions.jpg" width="950" height="150" alt=""/><!-- InstanceEndEditable --></td>
+    </tr>
+    <tr>
+      <td><p>&nbsp;</p>
+        
+        <table>
+          <tr>
+            <td><a href="1-rose-tyler.html">Rose Tyler</a></td>
+          </tr>
+          <tr>
+            <td><a href="2-amy-pond.html">Amy Pond</a></td>
+          </tr>
+          <tr>
+            <td><a href="3-martha-jones.html">Martha Jones</a></td>
+          </tr>
+          <tr>
+            <td><a href="4-jack-harness.html">Jack Harness</a></td>
+          </tr>
+          <tr>
+            <td><a href="5-lady-christina.html">Lady Christina de Souza</a></td>
+          </tr>
+          <tr>
+            <td><a href="6-rory-williams.html">Rory Williams</a></td>
+          </tr>
+          <tr>
+            <td><a href="7-river-song.html">River Song</a></td>
+          </tr>
+          <tr>
+            <td><a href="8-clara-oswald.html">Clara Oswald</a></td>
+          </tr>
+        </table>
+      </td>
+      <td>
+        <div class="doctor-who-content">
+          <!-- InstanceBeginEditable name="Content Area" -->
       <h1>The Companions</h1>
       <p>Companions were the Doctor's closest friends. Such people knew the Doctor's &quot;secret&quot;: that he was someone non-human who travelled in space and time in a police box-shaped craft called the TARDIS. They often directly saved his life  or provided him with a perspective that prevented him from abusing his Time Lord powers.  On some occasions, they were the proximate reason that the Doctor sacrificed his then-current life and regenerated. On others, they lost their lives in pursuit of the Doctor's goals. <br>
         Because the term was a shortening of the expression &quot;travelling companion&quot;, most companions did in fact voyage with him in the TARDIS. Depending on the situation, other words were used to describe the same relationship — most frequently, &quot;assistant&quot;. However, it was unusual to hear the Doctor call his friends by either word. Different incarnations had different preferences. The Third Doctor, perhaps owing to his unique situation of exile, most frequently used the term &quot;assistant&quot;.  On the other hand, the Eighth Doctor — whilst running a competition to find a new companion — was forced to define the word companion and eschewed the term assistant in favour of friend. <br>
@@ -61,9 +63,10 @@
       <p>Both terms were occasionally troublesome. Sometimes, the word companion was interpreted sexually, leading to confusion about the Doctor's relationship with his friends.  Sometimes, companions bickered over the appropriateness of the word assistant. Rose Tyler said emphatically, &quot;I'm not his assistant&quot;, when Sarah Jane called her one.  Rose seemed happier being called a &quot;companion&quot;, as when Harriet Jones called out over the Sub-Wave Network for &quot;former companions of the Doctor&quot;. <br>
         People were companions or assistants to the Doctor for varying lengths of time, but most stayed with him for more than one adventure.  Some stayed for a few days, while others were with him for years. </p>
     <!-- InstanceEndEditable -->
-   </div class="doctor-who-content"> 
-    </td>
-  </tr>
-</table>
+        </div class="doctor-who-content"> 
+      </td>
+    </tr>
+  </table>
+</div>
 </body>
 <!-- InstanceEnd --></html>
