--- a/website/the-doctors/10-david-tennant.html
+++ b/website/the-doctors/10-david-tennant.html
@@ -11,62 +11,64 @@
 <!-- InstanceParam name="The Doctor Secondary Menu" type="boolean" value="true" -->
 <!-- InstanceParam name="Companions Secondary Menu" type="boolean" value="false" -->
 <!-- InstanceParam name="Villians secondary menu" type="boolean" value="false" -->
+<link href="../styles.css" rel="stylesheet" type="text/css">
 </head>
 
 
 <body>
-<table>
-  <tr>
-    <td colspan="2"><p>[Primary Navigation]</p></td>
-  </tr>
-  <tr>
-    <td colspan="2"><!-- InstanceBeginEditable name="Banner" --><img src="../images/banners/banner-doctors.jpg" width="950" height="150" alt=""/><!-- InstanceEndEditable --></td>
-  </tr>
-  <tr>
-    <td><p>&nbsp;</p>
-      
-      <table>
-        <tr>
-          <td width="131"><p>The First Doctor</p></td>
-        </tr>
-        <tr>
-          <td>The Second Doctor</td>
-        </tr>
-        <tr>
-          <td>The Third Doctor</td>
-        </tr>
-        <tr>
-          <td>The Fourth Doctor</td>
-        </tr>
-        <tr>
-          <td>The Fifth Doctor</td>
-        </tr>
-        <tr>
-          <td>The Sixth Doctor</td>
-        </tr>
-        <tr>
-          <td>The Seventh Doctor</td>
-        </tr>
-        <tr>
-          <td>The Eigth Doctor</td>
-        </tr>
-        <tr>
-          <td>The Ninth Doctor</td>
-        </tr>
-        <tr>
-          <td>The Tenth Doctor</td>
-        </tr>
-        <tr>
-          <td><p>The Eleventh Doctor</p></td>
-        </tr>
-        <tr>
-          <td>The Twelfth Doctor</td>
-        </tr>
-      </table>
-      </td>
-    <td>
-    <div class="doctor-who-content">
-	<!-- InstanceBeginEditable name="Content Area" -->
+<div class="wrapper">
+  <table width="950">
+    <tr>
+      <td colspan="2"><p><a href="../about-the-doctor.html">Home </a><a href="index.html">The Doctors</a> <a href="../the-companions/index.html">Companions</a> <a href="../the-villans/index.html">Villians</a></p></td>
+    </tr>
+    <tr>
+      <td colspan="2"><!-- InstanceBeginEditable name="Banner" --><img src="../images/banners/banner-doctors.jpg" width="950" height="150" alt=""/><!-- InstanceEndEditable --></td>
+    </tr>
+    <tr>
+      <td><p>&nbsp;</p>
+        
+        <table>
+          <tr>
+            <td width="131"><p><a href="1-william-hartnell.html">The First Doctor</a></p></td>
+          </tr>
+          <tr>
+            <td><a href="2-patrick-troughton.html">The Second Doctor</a></td>
+          </tr>
+          <tr>
+            <td><a href="3-jon-pertwee.html">The Third Doctor</a></td>
+          </tr>
+          <tr>
+            <td><a href="4-tom-baker.html">The Fourth Doctor</a></td>
+          </tr>
+          <tr>
+            <td><a href="5-peter-davidson.html">The Fifth Doctor</a></td>
+          </tr>
+          <tr>
+            <td><a href="6-colin-baker.html">The Sixth Doctor</a></td>
+          </tr>
+          <tr>
+            <td><a href="7-sylvester-mccoy.html">The Seventh Doctor</a></td>
+          </tr>
+          <tr>
+            <td><a href="8-paul-mcgann.html">The Eigth Doctor</a></td>
+          </tr>
+          <tr>
+            <td><a href="9-christopher-eccleston.html">The Ninth Doctor</a></td>
+          </tr>
+          <tr>
+            <td><a href="10-david-tennant.html">The Tenth Doctor</a></td>
+          </tr>
+          <tr>
+            <td><p><a href="11-matt-smith.html">The Eleventh Doctor</a></p></td>
+          </tr>
+          <tr>
+            <td><a href="12-peter-capaldi.html">The Twelfth Doctor</a></td>
+          </tr>
+        </table>
+        </td>
+      <td>
+        <div class="doctor-who-content">
+          <!-- InstanceBeginEditable name="Content Area" -->
       <h1>The Tenth Doctor</h1>
       <p>Portrayed by<b> David Tennant</b></p>
       <p><img src="../images/the-doctors/doctor10.jpg" width="300" height="300" alt=""/>The Tenth Doctor is the tenth incarnation of the protagonist of the long-running BBC television science fiction series Doctor Who. He is played by David Tennant, who appears in three series as well as eight specials. As with previous incarnations of the Doctor, the character has also appeared in other Doctor Who multimedia.<br>
@@ -75,9 +77,10 @@
       <p>The Tenth Doctor generally displays a light-hearted, talkative, easy-going, witty, and cheeky manner, but repeatedly demonstrates a vengeful and unforgiving streak as well. This emerged early on when he sends the Sycorax leader (who is attacking him from behind) falling to his death while commenting that, with him, there are &quot;no second chances&quot;. In &quot;School Reunion&quot;, he acknowledges that he is less merciful than he used to be and has stuck to his &quot;one warning&quot; code, punishing his enemies if they persist in their hostilities. This is demonstrated in &quot;The Runaway Bride&quot; when he drowns the Empress of Racnoss' children and stoically watches on, prompting Donna Noble to declare that he needs somebody to stop him, and in &quot;The Family of Blood&quot; where he gives each Family member an individual and eternal punishment. His strong personal sense of justice makes him quick to anger when he feels it is violated, as in &quot;New Earth&quot; when he learns of the plague farm run by the Sisters of Plenitude, he brings down their entire operation. When Prime Minister Harriet Jones gives an order to destroy the retreating Sycorax ship against his intentions, he brings down her government in six words, &quot;Don't you think she looks tired?&quot;, which reaches the press via her assistant's headset. In &quot;The Waters of Mars&quot;, he goes so far as to declare himself above the laws of time, although there are catastrophic consequences as a result.</p>
       <p>This incarnation was very cheerful, charismatic and enthusiastic, often at inappropriate times even in danger, much like his next incarnation. While previous incarnations intentionally flouted social conventions, the tenth incarnation was genuinely shocked when he realized that he was being rude or uncouth. He occasionally got into trouble because of an apparent sense of superiority over those less &quot;clever&quot; than he was. He regularly used his name as a threat, which only rarely worked, despite his apparent expectations. </p>
     <!-- InstanceEndEditable -->
-   </div class="doctor-who-content"> 
-    </td>
-  </tr>
-</table>
+        </div class="doctor-who-content"> 
+      </td>
+    </tr>
+  </table>
+</div>
 </body>
 <!-- InstanceEnd --></html>
