--- a/website/the-villans/index.html
+++ b/website/the-villans/index.html
@@ -10,51 +10,54 @@
 <!-- InstanceParam name="The Doctor Secondary Menu" type="boolean" value="false" -->
 <!-- InstanceParam name="Companions Secondary Menu" type="boolean" value="false" -->
 <!-- InstanceParam name="Villians secondary menu" type="boolean" value="true" -->
+<link href="../styles.css" rel="stylesheet" type="text/css">
 </head>
 
 
 <body>
-<table>
-  <tr>
-    <td colspan="2"><p>[Primary Navigation]</p></td>
-  </tr>
-  <tr>
-    <td colspan="2"><!-- InstanceBeginEditable name="Banner" --><img src="../images/banners/banner-villains.jpg" width="950" height="150" alt=""/><!-- InstanceEndEditable --></td>
-  </tr>
-  <tr>
-    <td><p>&nbsp;</p>
-      
-      <table>
-        <tr>
-          <td>Daleks</td>
-        </tr>
-        <tr>
-          <td>Cyberman</td>
-        </tr>
-        <tr>
-          <td>The Master</td>
-        </tr>
-        <tr>
-          <td>Lady Cassandra</td>
-        </tr>
-        <tr>
-          <td>Davros</td>
-        </tr>
-        <tr>
-          <td>Weeping Angels</td>
-        </tr>
-      </table>
-      </td>
-    <td>
-    <div class="doctor-who-content">
-	<!-- InstanceBeginEditable name="Content Area" -->
+<div class="wrapper">
+  <table width="950">
+    <tr>
+      <td colspan="2"><p><a href="../about-the-doctor.html">Home </a><a href="../the-doctors/index.html">The Doctors</a> <a href="../the-companions/index.html">Companions</a> <a href="index.html">Villians</a></p></td>
+    </tr>
+    <tr>
+      <td colspan="2"><!-- InstanceBeginEditable name="Banner" --><img src="../images/banners/banner-villains.jpg" width="950" height="150" alt=""/><!-- InstanceEndEditable --></td>
+    </tr>
+    <tr>
+      <td><p>&nbsp;</p>
+        
+        <table>
+          <tr>
+            <td><a href="1-daleks.html">Daleks</a></td>
+          </tr>
+          <tr>
+            <td><a href="2-cyberman.html">Cyberman</a></td>
+          </tr>
+          <tr>
+            <td><a href="3-the-master.html">The Master</a></td>
+          </tr>
+          <tr>
+            <td><a href="4-lady-cassandra.html">Lady Cassandra</a></td>
+          </tr>
+          <tr>
+            <td><a href="5-davros.html">Davros</a></td>
+          </tr>
+          <tr>
+            <td><a href="6-weeping-angels.html">Weeping Angels</a></td>
+          </tr>
+        </table>
+        </td>
+      <td>
+        <div class="doctor-who-content">
+          <!-- InstanceBeginEditable name="Content Area" -->
       <h1>The Villians</h1>
       <p>Some corners of the universe have bred the most terrible things. And here’s where they gather! And where would the Doctor be without monsters to fight and evil to vanquish? From living plastic to Weeping Angels, and from a man made of sweets to villainous Time Ladies. Prepare to be exterminated, deleted, shrunk, mutated, eaten, brainwashed, candy-coated and zapped-back-in-time-to-live-yourself-to-death. Meet the worst of the worst - some of the Doctor’s greatest foes.</p>
       <p>Villains that have appeared on BBC's long-running sci-fi television series Doctor Who. These also include villains that appeared in the spin-off shows Torchwood, The Sarah Jane Adventures, and K-9.</p>
     <!-- InstanceEndEditable -->
-   </div class="doctor-who-content"> 
-    </td>
-  </tr>
-</table>
+        </div class="doctor-who-content"> 
+      </td>
+    </tr>
+  </table>
+</div>
 </body>
 <!-- InstanceEnd --></html>
