--- a/website/index.html
+++ b/website/index.html
@@ -10,47 +10,50 @@
 <!-- InstanceParam name="The Doctor Secondary Menu" type="boolean" value="false" -->
 <!-- InstanceParam name="Companions Secondary Menu" type="boolean" value="false" -->
 <!-- InstanceParam name="Villians secondary menu" type="boolean" value="true" -->
+<link href="styles.css" rel="stylesheet" type="text/css">
 </head>
 
 
 <body>
-<table>
-  <tr>
-    <td colspan="2"><p>[Primary Navigation]</p></td>
-  </tr>
-  <tr>
-    <td colspan="2"><!-- InstanceBeginEditable name="Banner" -->[Banner]<!-- InstanceEndEditable --></td>
-  </tr>
-  <tr>
-    <td><p>&nbsp;</p>
-      
-      <table>
-        <tr>
-          <td>Daleks</td>
-        </tr>
-        <tr>
-          <td>Cyberman</td>
-        </tr>
-        <tr>
-          <td>The Master</td>
-        </tr>
-        <tr>
-          <td>Lady Cassandra</td>
-        </tr>
-        <tr>
-          <td>Davros</td>
-        </tr>
-        <tr>
-          <td>Weeping Angels</td>
-        </tr>
-      </table>
+<div class="wrapper">
+  <table width="950">
+    <tr>
+      <td colspan="2"><p><a href="about-the-doctor.html">Home </a><a href="the-doctors/index.html">The Doctors</a> <a href="the-companions/index.html">Companions</a> <a href="the-villans/index.html">Villians</a></p></td>
+    </tr>
+    <tr>
+      <td colspan="2"><!-- InstanceBeginEditable name="Banner" -->[Banner]<!-- InstanceEndEditable --></td>
+    </tr>
+    <tr>
+      <td><p>&nbsp;</p>
+        
+        <table>
+          <tr>
+            <td><a href="the-villans/1-daleks.html">Daleks</a></td>
+          </tr>
+          <tr>
+            <td><a href="the-villans/2-cyberman.html">Cyberman</a></td>
+          </tr>
+          <tr>
+            <td><a href="the-villans/3-the-master.html">The Master</a></td>
+          </tr>
+          <tr>
+            <td><a href="the-villans/4-lady-cassandra.html">Lady Cassandra</a></td>
+          </tr>
+          <tr>
+            <td><a href="the-villans/5-davros.html">Davros</a></td>
+          </tr>
+          <tr>
+            <td><a href="the-villans/6-weeping-angels.html">Weeping Angels</a></td>
+          </tr>
+        </table>
+        </td>
+      <td>
+        <div class="doctor-who-content">
+          <!-- InstanceBeginEditable name="Content Area" -->Content<!-- InstanceEndEditable -->
+        </div class="doctor-who-content"> 
       </td>
-    <td>
-    <div class="doctor-who-content">
-	<!-- InstanceBeginEditable name="Content Area" -->Content<!-- InstanceEndEditable -->
-   </div class="doctor-who-content"> 
-    </td>
-  </tr>
-</table>
+    </tr>
+  </table>
+</div>
 </body>
 <!-- InstanceEnd --></html>
