--- a/website/the-companions/1-rose-tyler.html
+++ b/website/the-companions/1-rose-tyler.html
@@ -11,50 +11,52 @@
 <!-- InstanceParam name="The Doctor Secondary Menu" type="boolean" value="false" -->
 <!-- InstanceParam name="Companions Secondary Menu" type="boolean" value="true" -->
 <!-- InstanceParam name="Villians secondary menu" type="boolean" value="false" -->
+<link href="../styles.css" rel="stylesheet" type="text/css">
 </head>
 
 
 <body>
-<table>
-  <tr>
-    <td colspan="2"><p>[Primary Navigation]</p></td>
-  </tr>
-  <tr>
-    <td colspan="2"><!-- InstanceBeginEditable name="Banner" --><img src="../images/banners/banner-companions.jpg" width="950" height="150" alt=""/><!-- InstanceEndEditable --></td>
-  </tr>
-  <tr>
-    <td><p>&nbsp;</p>
-      
-      <table>
-        <tr>
-          <td>Rose Tyler</td>
-        </tr>
-        <tr>
-          <td>Amy Pond</td>
-        </tr>
-        <tr>
-          <td>Martha Jones</td>
-        </tr>
-        <tr>
-          <td>Jack Harness</td>
-        </tr>
-        <tr>
-          <td>Lady Christina de Souza</td>
-        </tr>
-        <tr>
-          <td>Rory Williams</td>
-        </tr>
-        <tr>
-          <td>River Song</td>
-        </tr>
-        <tr>
-          <td>Clara Oswald</td>
-        </tr>
-      </table>
-    </td>
-    <td>
-    <div class="doctor-who-content">
-	<!-- InstanceBeginEditable name="Content Area" -->
+<div class="wrapper">
+  <table width="950">
+    <tr>
+      <td colspan="2"><p><a href="../about-the-doctor.html">Home </a><a href="../the-doctors/index.html">The Doctors</a> <a href="index.html">Companions</a> <a href="../the-villans/index.html">Villians</a></p></td>
+    </tr>
+    <tr>
+      <td colspan="2"><!-- InstanceBeginEditable name="Banner" --><img src="../images/banners/banner-companions.jpg" width="950" height="150" alt=""/><!-- InstanceEndEditable --></td>
+    </tr>
+    <tr>
+      <td><p>&nbsp;</p>
+        
+        <table>
+          <tr>
+            <td><a href="1-rose-tyler.html">Rose Tyler</a></td>
+          </tr>
+          <tr>
+            <td><a href="2-amy-pond.html">Amy Pond</a></td>
+          </tr>
+          <tr>
+            <td><a href="3-martha-jones.html">Martha Jones</a></td>
+          </tr>
+          <tr>
+            <td><a href="4-jack-harness.html">Jack Harness</a></td>
+          </tr>
+          <tr>
+            <td><a href="5-lady-christina.html">Lady Christina de Souza</a></td>
+          </tr>
+          <tr>
+            <td><a href="6-rory-williams.html">Rory Williams</a></td>
+          </tr>
+          <tr>
+            <td><a href="7-river-song.html">River Song</a></td>
+          </tr>
+          <tr>
+            <td><a href="8-clara-oswald.html">Clara Oswald</a></td>
+          </tr>
+        </table>
+      </td>
+      <td>
+        <div class="doctor-who-content">
+          <!-- InstanceBeginEditable name="Content Area" -->
       <h1>Rose Tyler</h1>
       <p>Portrayed by <b>Billie Piper</b></p>
       <p><img src="../images/the-companions/rose-tyler.jpg" width="300" height="300" alt=""/>Rose Tyler is a fictional character portrayed by Billie Piper in the long-running British science fiction television series Doctor Who, and was created by series producer Russell T Davies. With the revival of Doctor Who in 2005, Rose was introduced in the eponymous series one premiere as a new companion of series protagonist the Doctor, in his ninth and tenth incarnations. The companion character, intended to act as an audience surrogate, was key in the first series more so than any other to introduce new viewers to Doctor Who, which had not aired regularly since 1989. The series saw Billie Piper receive top billing alongside Christopher Eccleston and David Tennant, both of whom portrayed the Doctor. A regular companion of the Doctor for all of series one and series two, Rose also returned in the programme's fourth series having developed into a harder character.<br>
@@ -62,9 +64,10 @@
       <p>In the series' narrative, Rose is introduced as a 19-year-old working class shop assistant from London, alongside her own supporting cast in the form of her mother Jackie Tyler (Camille Coduri) and her boyfriend Mickey Smith (Noel Clarke). Over the course of the first series Rose's human actions and responses contrast with the Doctor's alien perspectives. He comes to value and depend on her and sacrifices his Ninth incarnation for her. Rose grows increasingly trusting of the new Doctor and comes to realise she has fallen in love with him. The two appear to be forever separated in the 2006 series two finale, although Rose eventually made a temporary return late in the fourth series in which her relationship to the Doctor is given resolution.</p>
       <p>Rose was a resourceful, brave, sweet and kind-hearted girl. According to the Ninth Doctor, she was able to ask the right questions when the Fourth Great and Bountiful Human Empire's technology and culture seemed wrong. She was quick to adapt to strange events. When she travelled back to the 1980s when she was just a baby, her father recognized her mother's acerbic wit. She was not only brilliant, but also very observant, and often noticed things the Doctor did not. </p>
     <!-- InstanceEndEditable -->
-   </div class="doctor-who-content"> 
-    </td>
-  </tr>
-</table>
+        </div class="doctor-who-content"> 
+      </td>
+    </tr>
+  </table>
+</div>
 </body>
 <!-- InstanceEnd --></html>
