--- a/website/the-companions/3-martha-jones.html
+++ b/website/the-companions/3-martha-jones.html
@@ -11,50 +11,52 @@
 <!-- InstanceParam name="The Doctor Secondary Menu" type="boolean" value="false" -->
 <!-- InstanceParam name="Companions Secondary Menu" type="boolean" value="true" -->
 <!-- InstanceParam name="Villians secondary menu" type="boolean" value="false" -->
+<link href="../styles.css" rel="stylesheet" type="text/css">
 </head>
 
 
 <body>
-<table>
-  <tr>
-    <td colspan="2"><p>[Primary Navigation]</p></td>
-  </tr>
-  <tr>
-    <td colspan="2"><!-- InstanceBeginEditable name="Banner" --><img src="../images/banners/banner-companions.jpg" width="950" height="150" alt=""/><!-- InstanceEndEditable --></td>
-  </tr>
-  <tr>
-    <td><p>&nbsp;</p>
-      
-      <table>
-        <tr>
-          <td>Rose Tyler</td>
-        </tr>
-        <tr>
-          <td>Amy Pond</td>
-        </tr>
-        <tr>
-          <td>Martha Jones</td>
-        </tr>
-        <tr>
-          <td>Jack Harness</td>
-        </tr>
-        <tr>
-          <td>Lady Christina de Souza</td>
-        </tr>
-        <tr>
-          <td>Rory Williams</td>
-        </tr>
-        <tr>
-          <td>River Song</td>
-        </tr>
-        <tr>
-          <td>Clara Oswald</td>
-        </tr>
-      </table>
-    </td>
-    <td>
-    <div class="doctor-who-content">
-	<!-- InstanceBeginEditable name="Content Area" -->
+<div class="wrapper">
+  <table width="950">
+    <tr>
+      <td colspan="2"><p><a href="../about-the-doctor.html">Home </a><a href="../the-doctors/index.html">The Doctors</a> <a href="index.html">Companions</a> <a href="../the-villans/index.html">Villians</a></p></td>
+    </tr>
+    <tr>
+      <td colspan="2"><!-- InstanceBeginEditable name="Banner" --><img src="../images/banners/banner-companions.jpg" width="950" height="150" alt=""/><!-- InstanceEndEditable --></td>
+    </tr>
+    <tr>
+      <td><p>&nbsp;</p>
+        
+        <table>
+          <tr>
+            <td><a href="1-rose-tyler.html">Rose Tyler</a></td>
+          </tr>
+          <tr>
+            <td><a href="2-amy-pond.html">Amy Pond</a></td>
+          </tr>
+          <tr>
+            <td><a href="3-martha-jones.html">Martha Jones</a></td>
+          </tr>
+          <tr>
+            <td><a href="4-jack-harness.html">Jack Harness</a></td>
+          </tr>
+          <tr>
+            <td><a href="5-lady-christina.html">Lady Christina de Souza</a></td>
+          </tr>
+          <tr>
+            <td><a href="6-rory-williams.html">Rory Williams</a></td>
+          </tr>
+          <tr>
+            <td><a href="7-river-song.html">River Song</a></td>
+          </tr>
+          <tr>
+            <td><a href="8-clara-oswald.html">Clara Oswald</a></td>
+          </tr>
+        </table>
+      </td>
+      <td>
+        <div class="doctor-who-content">
+          <!-- InstanceBeginEditable name="Content Area" -->
       <h1>Martha Jones </h1>
       <p>Portrayed by <b>Freema Agyeman</b></p>
       <p><img src="../images/the-companions/martha-jones.jpg" width="300" height="300" alt=""/>Martha Jones is a fictional character played by Freema Agyeman in the long-running British science fiction television series Doctor Who and its spin-off series, Torchwood. She is a companion of the Tenth Doctor in Doctor Who, replacing Rose Tyler (Billie Piper). According to the character's creator and executive producer Russell T Davies in his non-fiction book Doctor Who: The Writer's Tale, the character was developed from the beginning with the intention of appearing for a whole of the 2007 series, and to later make guest appearances in subsequent series and crossover appearances in the show's two spin-offs; Martha subsequently made guest appearances in Torchwood series two and in Doctor Who series four in 2008 and special episode The End of Time in 2010. Martha was also intended to make guest appearances in the 2009 series of Torchwood and The Sarah Jane Adventures, but could not due to the actress' other obligations.<br>
@@ -62,9 +64,10 @@
       <p>Within the series' narrative, Martha begins as a medical student who becomes the Doctor's time travelling companion after an incident at the hospital where she works. After well over a year (from the perspective of the Doctor and herself) of service at the Doctor's side, Martha parts from the Doctor's company as she cannot bear her own unrequited love for him. After returning to life on Earth, becoming engaged and finishing her medical degree, Martha finds a newfound level of independence when she is recruited into the paranormal military organisations UNIT, and briefly Torchwood. Having faced the end of the world single-handedly during her time with the Doctor, Martha is recognised for her skills both in the field and in medicine.</p>
       <p>Martha was an intelligent, brave and kind-hearted woman with a great sense of humor. When she was a prisoner of the Daleks, one of them confirmed that she possessed high intelligence. The Doctor was impressed with her theory about having air on the Moon, and he asked her to join him in the hospital balcony to see if they could breathe. Although the Doctor asked more of her than any other companion (watching after him while he was human, walking the world for a year), she rose to every challenge. </p>
     <!-- InstanceEndEditable -->
-   </div class="doctor-who-content"> 
-    </td>
-  </tr>
-</table>
+        </div class="doctor-who-content"> 
+      </td>
+    </tr>
+  </table>
+</div>
 </body>
 <!-- InstanceEnd --></html>
