--- a/website/the-doctors/11-matt-smith.html
+++ b/website/the-doctors/11-matt-smith.html
@@ -11,62 +11,64 @@
 <!-- InstanceParam name="The Doctor Secondary Menu" type="boolean" value="true" -->
 <!-- InstanceParam name="Companions Secondary Menu" type="boolean" value="false" -->
 <!-- InstanceParam name="Villians secondary menu" type="boolean" value="false" -->
+<link href="../styles.css" rel="stylesheet" type="text/css">
 </head>
 
 
 <body>
-<table>
-  <tr>
-    <td colspan="2"><p>[Primary Navigation]</p></td>
-  </tr>
-  <tr>
-    <td colspan="2"><!-- InstanceBeginEditable name="Banner" --><img src="../images/banners/banner-doctors.jpg" width="950" height="150" alt=""/><!-- InstanceEndEditable --></td>
-  </tr>
-  <tr>
-    <td><p>&nbsp;</p>
-      
-      <table>
-        <tr>
-          <td width="131"><p>The First Doctor</p></td>
-        </tr>
-        <tr>
-          <td>The Second Doctor</td>
-        </tr>
-        <tr>
-          <td>The Third Doctor</td>
-        </tr>
-        <tr>
-          <td>The Fourth Doctor</td>
-        </tr>
-        <tr>
-          <td>The Fifth Doctor</td>
-        </tr>
-        <tr>
-          <td>The Sixth Doctor</td>
-        </tr>
-        <tr>
-          <td>The Seventh Doctor</td>
-        </tr>
-        <tr>
-          <td>The Eigth Doctor</td>
-        </tr>
-        <tr>
-          <td>The Ninth Doctor</td>
-        </tr>
-        <tr>
-          <td>The Tenth Doctor</td>
-        </tr>
-        <tr>
-          <td><p>The Eleventh Doctor</p></td>
-        </tr>
-        <tr>
-          <td>The Twelfth Doctor</td>
-        </tr>
-      </table>
-      </td>
-    <td>
-    <div class="doctor-who-content">
-	<!-- InstanceBeginEditable name="Content Area" -->
+<div class="wrapper">
+  <table width="950">
+    <tr>
+      <td colspan="2"><p><a href="../about-the-doctor.html">Home </a><a href="index.html">The Doctors</a> <a href="../the-companions/index.html">Companions</a> <a href="../the-villans/index.html">Villians</a></p></td>
+    </tr>
+    <tr>
+      <td colspan="2"><!-- InstanceBeginEditable name="Banner" --><img src="../images/banners/banner-doctors.jpg" width="950" height="150" alt=""/><!-- InstanceEndEditable --></td>
+    </tr>
+    <tr>
+      <td><p>&nbsp;</p>
+        
+        <table>
+          <tr>
+            <td width="131"><p><a href="1-william-hartnell.html">The First Doctor</a></p></td>
+          </tr>
+          <tr>
+            <td><a href="2-patrick-troughton.html">The Second Doctor</a></td>
+          </tr>
+          <tr>
+            <td><a href="3-jon-pertwee.html">The Third Doctor</a></td>
+          </tr>
+          <tr>
+            <td><a href="4-tom-baker.html">The Fourth Doctor</a></td>
+          </tr>
+          <tr>
+            <td><a href="5-peter-davidson.html">The Fifth Doctor</a></td>
+          </tr>
+          <tr>
+            <td><a href="6-colin-baker.html">The Sixth Doctor</a></td>
+          </tr>
+          <tr>
+            <td><a href="7-sylvester-mccoy.html">The Seventh Doctor</a></td>
+          </tr>
+          <tr>
+            <td><a href="8-paul-mcgann.html">The Eigth Doctor</a></td>
+          </tr>
+          <tr>
+            <td><a href="9-christopher-eccleston.html">The Ninth Doctor</a></td>
+          </tr>
+          <tr>
+            <td><a href="10-david-tennant.html">The Tenth Doctor</a></td>
+          </tr>
+          <tr>
+            <td><p><a href="11-matt-smith.html">The Eleventh Doctor</a></p></td>
+          </tr>
+          <tr>
+            <td><a href="12-peter-capaldi.html">The Twelfth Doctor</a></td>
+          </tr>
+        </table>
+        </td>
+      <td>
+        <div class="doctor-who-content">
+          <!-- InstanceBeginEditable name="Content Area" -->
       <h1>The Eleventh Doctor</h1>
       <p>Portrayed by<b>Matt Smith</b></p>
       <p><img src="../images/the-doctors/doctor11.jpg" width="300" height="300" alt=""/>The Eleventh Doctor is the eleventh incarnation of the protagonist of the BBC television science fiction series Doctor Who. He is played by Matt Smith, who appears in three series as well as seven specials, over an almost four-year period. As with previous incarnations of the Doctor, the character has also appeared in other Doctor Who multimedia.<br>
@@ -75,9 +77,10 @@
         The Eleventh Doctor is portrayed as a brash and lively man who is rather lonely and very aware of his reputation as a fierce enemy to his adversaries (seen when he uses his reputation to scare away the Atraxi in &quot;The Eleventh Hour&quot; or clear the skies above Stonehenge in &quot;The Pandorica Opens&quot;) but has a great deal of affection for his loved ones. He is at times childlike, arguably downright childish, which allows him to connect very well with children. However, there are also times when he acts his age, such as when he retires in Victorian London after the loss of Amy Pond and Rory Williams and becomes a grumpy and solitary man who refuses to interact with others until he is charmed by Clara Oswald. Unlike his two most immediate predecessors, this Doctor seems ignorant of the details of human popular culture, beyond a few references to classic literature, and is often seen embarrassing his companions with his attempts to be cool (including enthusiastic dancing). He even shows ignorance of adult activities such as sharing a bed, providing bunk beds in the TARDIS for the married Ponds, and drinking wine before spitting it back into the glass after trying it. He is also inept at responding to romantic advances, acting awkwardly when River Song and Amy try to seduce him; however, there are times when he behaves more maturely in romantic situations, frequently flirting with River and eventually marrying her, despite his usual discomfort with romance.</p>
       <p>This incarnation was very cheerful, charismatic and enthusiastic, often at inappropriate times even in danger, much like his next incarnation. While previous incarnations intentionally flouted social conventions, the tenth incarnation was genuinely shocked when he realized that he was being rude or uncouth. He occasionally got into trouble because of an apparent sense of superiority over those less &quot;clever&quot; than he was. He regularly used his name as a threat, which only rarely worked, despite his apparent expectations. </p>
     <!-- InstanceEndEditable -->
-   </div class="doctor-who-content"> 
-    </td>
-  </tr>
-</table>
+        </div class="doctor-who-content"> 
+      </td>
+    </tr>
+  </table>
+</div>
 </body>
 <!-- InstanceEnd --></html>
