--- a/website/the-doctors/3-jon-pertwee.html
+++ b/website/the-doctors/3-jon-pertwee.html
@@ -11,62 +11,64 @@
 <!-- InstanceParam name="The Doctor Secondary Menu" type="boolean" value="true" -->
 <!-- InstanceParam name="Companions Secondary Menu" type="boolean" value="false" -->
 <!-- InstanceParam name="Villians secondary menu" type="boolean" value="false" -->
+<link href="../styles.css" rel="stylesheet" type="text/css">
 </head>
 
 
 <body>
-<table>
-  <tr>
-    <td colspan="2"><p>[Primary Navigation]</p></td>
-  </tr>
-  <tr>
-    <td colspan="2"><!-- InstanceBeginEditable name="Banner" --><img src="../images/banners/banner-doctors.jpg" width="950" height="150" alt=""/><!-- InstanceEndEditable --></td>
-  </tr>
-  <tr>
-    <td><p>&nbsp;</p>
-      
-      <table>
-        <tr>
-          <td width="131"><p>The First Doctor</p></td>
-        </tr>
-        <tr>
-          <td>The Second Doctor</td>
-        </tr>
-        <tr>
-          <td>The Third Doctor</td>
-        </tr>
-        <tr>
-          <td>The Fourth Doctor</td>
-        </tr>
-        <tr>
-          <td>The Fifth Doctor</td>
-        </tr>
-        <tr>
-          <td>The Sixth Doctor</td>
-        </tr>
-        <tr>
-          <td>The Seventh Doctor</td>
-        </tr>
-        <tr>
-          <td>The Eigth Doctor</td>
-        </tr>
-        <tr>
-          <td>The Ninth Doctor</td>
-        </tr>
-        <tr>
-          <td>The Tenth Doctor</td>
-        </tr>
-        <tr>
-          <td><p>The Eleventh Doctor</p></td>
-        </tr>
-        <tr>
-          <td>The Twelfth Doctor</td>
-        </tr>
-      </table>
-      </td>
-    <td>
-    <div class="doctor-who-content">
-	<!-- InstanceBeginEditable name="Content Area" -->
+<div class="wrapper">
+  <table width="950">
+    <tr>
+      <td colspan="2"><p><a href="../about-the-doctor.html">Home </a><a href="index.html">The Doctors</a> <a href="../the-companions/index.html">Companions</a> <a href="../the-villans/index.html">Villians</a></p></td>
+    </tr>
+    <tr>
+      <td colspan="2"><!-- InstanceBeginEditable name="Banner" --><img src="../images/banners/banner-doctors.jpg" width="950" height="150" alt=""/><!-- InstanceEndEditable --></td>
+    </tr>
+    <tr>
+      <td><p>&nbsp;</p>
+        
+        <table>
+          <tr>
+            <td width="131"><p><a href="1-william-hartnell.html">The First Doctor</a></p></td>
+          </tr>
+          <tr>
+            <td><a href="2-patrick-troughton.html">The Second Doctor</a></td>
+          </tr>
+          <tr>
+            <td><a href="3-jon-pertwee.html">The Third Doctor</a></td>
+          </tr>
+          <tr>
+            <td><a href="4-tom-baker.html">The Fourth Doctor</a></td>
+          </tr>
+          <tr>
+            <td><a href="5-peter-davidson.html">The Fifth Doctor</a></td>
+          </tr>
+          <tr>
+            <td><a href="6-colin-baker.html">The Sixth Doctor</a></td>
+          </tr>
+          <tr>
+            <td><a href="7-sylvester-mccoy.html">The Seventh Doctor</a></td>
+          </tr>
+          <tr>
+            <td><a href="8-paul-mcgann.html">The Eigth Doctor</a></td>
+          </tr>
+          <tr>
+            <td><a href="9-christopher-eccleston.html">The Ninth Doctor</a></td>
+          </tr>
+          <tr>
+            <td><a href="10-david-tennant.html">The Tenth Doctor</a></td>
+          </tr>
+          <tr>
+            <td><p><a href="11-matt-smith.html">The Eleventh Doctor</a></p></td>
+          </tr>
+          <tr>
+            <td><a href="12-peter-capaldi.html">The Twelfth Doctor</a></td>
+          </tr>
+        </table>
+        </td>
+      <td>
+        <div class="doctor-who-content">
+          <!-- InstanceBeginEditable name="Content Area" -->
       <h1>The Third Doctor </h1>
       <p>Portrayed by <strong>Jon Pertwee</strong></p>
       <p><img src="../images/the-doctors/doctor3.jpg" width="300" height="300" alt=""/>The Third Doctor is the third incarnation of the protagonist of the long-running BBC television science fiction series Doctor Who. He was portrayed by actor Jon Pertwee.<br>
@@ -75,9 +77,10 @@
         </p>
       <p>The Third Doctor was a suave, dapper, technologically oriented, and authoritative man of action who practised Venusian Aikido (or Karate). A keen scientist, he maintained a laboratory at UNIT where he enjoyed working on gadgets in his TARDIS. In his spare time, he was fond of motoring, handing all manner of vehicles. His favourite car was a canary-yellow vintage roadster that he nicknamed &quot;Bessie,&quot; a construct which featured such modifications as a remote control, dramatically increased speed capabilities, and inertial dampeners. He also maintained a hovercraft-like vessel that fans nicknamed the Whomobile. The First Doctor, upon meeting the Third, described him indignantly as a &quot;dandy&quot;, while the Second Doctor, with whom the Third had something of an antagonistic relationship on the occasions they encountered each other, referred to him as &quot;Fancy Pants&quot;.</p>
     <!-- InstanceEndEditable -->
-   </div class="doctor-who-content"> 
-    </td>
-  </tr>
-</table>
+        </div class="doctor-who-content"> 
+      </td>
+    </tr>
+  </table>
+</div>
 </body>
 <!-- InstanceEnd --></html>
