--- a/website/the-doctors/5-peter-davidson.html
+++ b/website/the-doctors/5-peter-davidson.html
@@ -11,62 +11,64 @@
 <!-- InstanceParam name="The Doctor Secondary Menu" type="boolean" value="true" -->
 <!-- InstanceParam name="Companions Secondary Menu" type="boolean" value="false" -->
 <!-- InstanceParam name="Villians secondary menu" type="boolean" value="false" -->
+<link href="../styles.css" rel="stylesheet" type="text/css">
 </head>
 
 
 <body>
-<table>
-  <tr>
-    <td colspan="2"><p>[Primary Navigation]</p></td>
-  </tr>
-  <tr>
-    <td colspan="2"><!-- InstanceBeginEditable name="Banner" --><img src="../images/banners/banner-doctors.jpg" width="950" height="150" alt=""/><!-- InstanceEndEditable --></td>
-  </tr>
-  <tr>
-    <td><p>&nbsp;</p>
-      
-      <table>
-        <tr>
-          <td width="131"><p>The First Doctor</p></td>
-        </tr>
-        <tr>
-          <td>The Second Doctor</td>
-        </tr>
-        <tr>
-          <td>The Third Doctor</td>
-        </tr>
-        <tr>
-          <td>The Fourth Doctor</td>
-        </tr>
-        <tr>
-          <td>The Fifth Doctor</td>
-        </tr>
-        <tr>
-          <td>The Sixth Doctor</td>
-        </tr>
-        <tr>
-          <td>The Seventh Doctor</td>
-        </tr>
-        <tr>
-          <td>The Eigth Doctor</td>
-        </tr>
-        <tr>
-          <td>The Ninth Doctor</td>
-        </tr>
-        <tr>
-          <td>The Tenth Doctor</td>
-        </tr>
-        <tr>
-          <td><p>The Eleventh Doctor</p></td>
-        </tr>
-        <tr>
-          <td>The Twelfth Doctor</td>
-        </tr>
-      </table>
-      </td>
-    <td>
-    <div class="doctor-who-content">
-	<!-- InstanceBeginEditable name="Content Area" -->
+<div class="wrapper">
+  <table width="950">
+    <tr>
+      <td colspan="2"><p><a href="../about-the-doctor.html">Home </a><a href="index.html">The Doctors</a> <a href="../the-companions/index.html">Companions</a> <a href="../the-villans/index.html">Villians</a></p></td>
+    </tr>
+    <tr>
+      <td colspan="2"><!-- InstanceBeginEditable name="Banner" --><img src="../images/banners/banner-doctors.jpg" width="950" height="150" alt=""/><!-- InstanceEndEditable --></td>
+    </tr>
+    <tr>
+      <td><p>&nbsp;</p>
+        
+        <table>
+          <tr>
+            <td width="131"><p><a href="1-william-hartnell.html">The First Doctor</a></p></td>
+          </tr>
+          <tr>
+            <td><a href="2-patrick-troughton.html">The Second Doctor</a></td>
+          </tr>
+          <tr>
+            <td><a href="3-jon-pertwee.html">The Third Doctor</a></td>
+          </tr>
+          <tr>
+            <td><a href="4-tom-baker.html">The Fourth Doctor</a></td>
+          </tr>
+          <tr>
+            <td><a href="5-peter-davidson.html">The Fifth Doctor</a></td>
+          </tr>
+          <tr>
+            <td><a href="6-colin-baker.html">The Sixth Doctor</a></td>
+          </tr>
+          <tr>
+            <td><a href="7-sylvester-mccoy.html">The Seventh Doctor</a></td>
+          </tr>
+          <tr>
+            <td><a href="8-paul-mcgann.html">The Eigth Doctor</a></td>
+          </tr>
+          <tr>
+            <td><a href="9-christopher-eccleston.html">The Ninth Doctor</a></td>
+          </tr>
+          <tr>
+            <td><a href="10-david-tennant.html">The Tenth Doctor</a></td>
+          </tr>
+          <tr>
+            <td><p><a href="11-matt-smith.html">The Eleventh Doctor</a></p></td>
+          </tr>
+          <tr>
+            <td><a href="12-peter-capaldi.html">The Twelfth Doctor</a></td>
+          </tr>
+        </table>
+        </td>
+      <td>
+        <div class="doctor-who-content">
+          <!-- InstanceBeginEditable name="Content Area" -->
       <h1>The Fifth Doctor</h1>
       <p>Portrayed by <strong>Peter Davidson</strong></p>
       <p><img src="../images/the-doctors/doctor5.jpg" width="300" height="300" alt=""/>The Fifth Doctor is the fifth incarnation of the protagonist of the long-running BBC television science fiction series Doctor Who. He is portrayed by Peter Davison.<br>
@@ -75,9 +77,10 @@
         </p>
       <p>The Fifth Doctor was far more vulnerable, sensitive, and reserved than his previous incarnations and often reacted to situations rather than initiating them. Frequently, he made decisions by flipping a coin. Unlike his more authoritative predecessors, he treated his young companions as parts of a team, and often willingly participated in situations under the leadership of someone else who had the strong command presence that he apparently lacked. However, the Fifth Doctor's boyish appearance, nervous energy, and charm all hid the fact that he was a Time Lord of great age, compassion, and experience. He could decipher the ingredients of a drink by smell alone and rosemary made him sneeze.</p>
     <!-- InstanceEndEditable -->
-   </div class="doctor-who-content"> 
-    </td>
-  </tr>
-</table>
+        </div class="doctor-who-content"> 
+      </td>
+    </tr>
+  </table>
+</div>
 </body>
 <!-- InstanceEnd --></html>
