--- a/website/the-villans/1-daleks.html
+++ b/website/the-villans/1-daleks.html
@@ -11,44 +11,46 @@
 <!-- InstanceParam name="The Doctor Secondary Menu" type="boolean" value="false" -->
 <!-- InstanceParam name="Companions Secondary Menu" type="boolean" value="false" -->
 <!-- InstanceParam name="Villians secondary menu" type="boolean" value="true" -->
+<link href="../styles.css" rel="stylesheet" type="text/css">
 </head>
 
 
 <body>
-<table>
-  <tr>
-    <td colspan="2"><p>[Primary Navigation]</p></td>
-  </tr>
-  <tr>
-    <td colspan="2"><!-- InstanceBeginEditable name="Banner" --><img src="../images/banners/banner-villains.jpg" width="950" height="150" alt=""/><!-- InstanceEndEditable --></td>
-  </tr>
-  <tr>
-    <td><p>&nbsp;</p>
-      
-      <table>
-        <tr>
-          <td>Daleks</td>
-        </tr>
-        <tr>
-          <td>Cyberman</td>
-        </tr>
-        <tr>
-          <td>The Master</td>
-        </tr>
-        <tr>
-          <td>Lady Cassandra</td>
-        </tr>
-        <tr>
-          <td>Davros</td>
-        </tr>
-        <tr>
-          <td>Weeping Angels</td>
-        </tr>
-      </table>
-      </td>
-    <td>
-    <div class="doctor-who-content">
-	<!-- InstanceBeginEditable name="Content Area" -->
+<div class="wrapper">
+  <table width="950">
+    <tr>
+      <td colspan="2"><p><a href="../about-the-doctor.html">Home </a><a href="../the-doctors/index.html">The Doctors</a> <a href="../the-companions/index.html">Companions</a> <a href="index.html">Villians</a></p></td>
+    </tr>
+    <tr>
+      <td colspan="2"><!-- InstanceBeginEditable name="Banner" --><img src="../images/banners/banner-villains.jpg" width="950" height="150" alt=""/><!-- InstanceEndEditable --></td>
+    </tr>
+    <tr>
+      <td><p>&nbsp;</p>
+        
+        <table>
+          <tr>
+            <td><a href="1-daleks.html">Daleks</a></td>
+          </tr>
+          <tr>
+            <td><a href="2-cyberman.html">Cyberman</a></td>
+          </tr>
+          <tr>
+            <td><a href="3-the-master.html">The Master</a></td>
+          </tr>
+          <tr>
+            <td><a href="4-lady-cassandra.html">Lady Cassandra</a></td>
+          </tr>
+          <tr>
+            <td><a href="5-davros.html">Davros</a></td>
+          </tr>
+          <tr>
+            <td><a href="6-weeping-angels.html">Weeping Angels</a></td>
+          </tr>
+        </table>
+        </td>
+      <td>
+        <div class="doctor-who-content">
+          <!-- InstanceBeginEditable name="Content Area" -->
       <h1>Daleks      </h1>
       <p><img src="../images/the-villians/daleks.jpg" width="300" height="300" alt=""/>Daleks were the armoured, mutated descendants of the Kaleds of the planet Skaro. They fought the Time Lords in the Last Great Time War, ending in the near-total destruction of both races. The Daleks were hated and feared throughout time and space. They were the oldest and most frequent foes of the Doctor, having faced him several times in every one of his incarnations.The Daleks were conceived by science-fiction writer Terry Nation and first appeared in the 1963 Doctor Who serial The Daleks, in the shells designed by Raymond Cusick.<br>
         </p>
@@ -59,9 +61,10 @@
         ▪	Midsection: On the Dalek's midsection, the gunstick and manipulator arm were attached. These provided the Dalek's means of offence and operating capabilities. In later models, the midsection was capable of swiveling.<br>
         ▪	Bottom: The Dalek's means of mobility was a sturdy base with a skirt-like structure of plates studded with globes. This allowed movement and, in later models, flight. </p>
     <!-- InstanceEndEditable -->
-   </div class="doctor-who-content"> 
-    </td>
-  </tr>
-</table>
+        </div class="doctor-who-content"> 
+      </td>
+    </tr>
+  </table>
+</div>
 </body>
 <!-- InstanceEnd --></html>
