--- a/website/the-villans/3-the-master.html
+++ b/website/the-villans/3-the-master.html
@@ -11,44 +11,46 @@
 <!-- InstanceParam name="The Doctor Secondary Menu" type="boolean" value="false" -->
 <!-- InstanceParam name="Companions Secondary Menu" type="boolean" value="false" -->
 <!-- InstanceParam name="Villians secondary menu" type="boolean" value="true" -->
+<link href="../styles.css" rel="stylesheet" type="text/css">
 </head>
 
 
 <body>
-<table>
-  <tr>
-    <td colspan="2"><p>[Primary Navigation]</p></td>
-  </tr>
-  <tr>
-    <td colspan="2"><!-- InstanceBeginEditable name="Banner" --><img src="../images/banners/banner-villains.jpg" width="950" height="150" alt=""/><!-- InstanceEndEditable --></td>
-  </tr>
-  <tr>
-    <td><p>&nbsp;</p>
-      
-      <table>
-        <tr>
-          <td>Daleks</td>
-        </tr>
-        <tr>
-          <td>Cyberman</td>
-        </tr>
-        <tr>
-          <td>The Master</td>
-        </tr>
-        <tr>
-          <td>Lady Cassandra</td>
-        </tr>
-        <tr>
-          <td>Davros</td>
-        </tr>
-        <tr>
-          <td>Weeping Angels</td>
-        </tr>
-      </table>
-      </td>
-    <td>
-    <div class="doctor-who-content">
-	<!-- InstanceBeginEditable name="Content Area" -->
+<div class="wrapper">
+  <table width="950">
+    <tr>
+      <td colspan="2"><p><a href="../about-the-doctor.html">Home </a><a href="../the-doctors/index.html">The Doctors</a> <a href="../the-companions/index.html">Companions</a> <a href="index.html">Villians</a></p></td>
+    </tr>
+    <tr>
+      <td colspan="2"><!-- InstanceBeginEditable name="Banner" --><img src="../images/banners/banner-villains.jpg" width="950" height="150" alt=""/><!-- InstanceEndEditable --></td>
+    </tr>
+    <tr>
+      <td><p>&nbsp;</p>
+        
+        <table>
+          <tr>
+            <td><a href="1-daleks.html">Daleks</a></td>
+          </tr>
+          <tr>
+            <td><a href="2-cyberman.html">Cyberman</a></td>
+          </tr>
+          <tr>
+            <td><a href="3-the-master.html">The Master</a></td>
+          </tr>
+          <tr>
+            <td><a href="4-lady-cassandra.html">Lady Cassandra</a></td>
+          </tr>
+          <tr>
+            <td><a href="5-davros.html">Davros</a></td>
+          </tr>
+          <tr>
+            <td><a href="6-weeping-angels.html">Weeping Angels</a></td>
+          </tr>
+        </table>
+        </td>
+      <td>
+        <div class="doctor-who-content">
+          <!-- InstanceBeginEditable name="Content Area" -->
       <h1>The Master</h1>
       <p>Portrayed by <b>Geoffery Beevers</b></p>
       <p><img src="../images/the-villians/the-master.jpg" width="300" height="300" alt=""/>The Master — originally called Koschei and known by many other temporary aliases — was a renegade Time Lord and the Doctor's arch-nemesis.<br>
@@ -58,9 +60,10 @@
         </p>
       <p>It was eventually discovered that the Master's diabolical madness was partially the result of a genuine malady in the form of a never-ending drumming sound that had been retroactively implanted inside his head by the Time Lords on the last day of the Last Great Time War to further their own goals.</p>
     <!-- InstanceEndEditable -->
-   </div class="doctor-who-content"> 
-    </td>
-  </tr>
-</table>
+        </div class="doctor-who-content"> 
+      </td>
+    </tr>
+  </table>
+</div>
 </body>
 <!-- InstanceEnd --></html>
