--- a/website/the-villans/4-lady-cassandra.html
+++ b/website/the-villans/4-lady-cassandra.html
@@ -11,44 +11,46 @@
 <!-- InstanceParam name="The Doctor Secondary Menu" type="boolean" value="false" -->
 <!-- InstanceParam name="Companions Secondary Menu" type="boolean" value="false" -->
 <!-- InstanceParam name="Villians secondary menu" type="boolean" value="true" -->
+<link href="../styles.css" rel="stylesheet" type="text/css">
 </head>
 
 
 <body>
-<table>
-  <tr>
-    <td colspan="2"><p>[Primary Navigation]</p></td>
-  </tr>
-  <tr>
-    <td colspan="2"><!-- InstanceBeginEditable name="Banner" --><img src="../images/banners/banner-villains.jpg" width="950" height="150" alt=""/><!-- InstanceEndEditable --></td>
-  </tr>
-  <tr>
-    <td><p>&nbsp;</p>
-      
-      <table>
-        <tr>
-          <td>Daleks</td>
-        </tr>
-        <tr>
-          <td>Cyberman</td>
-        </tr>
-        <tr>
-          <td>The Master</td>
-        </tr>
-        <tr>
-          <td>Lady Cassandra</td>
-        </tr>
-        <tr>
-          <td>Davros</td>
-        </tr>
-        <tr>
-          <td>Weeping Angels</td>
-        </tr>
-      </table>
-      </td>
-    <td>
-    <div class="doctor-who-content">
-	<!-- InstanceBeginEditable name="Content Area" -->
+<div class="wrapper">
+  <table width="950">
+    <tr>
+      <td colspan="2"><p><a href="../about-the-doctor.html">Home </a><a href="../the-doctors/index.html">The Doctors</a> <a href="../the-companions/index.html">Companions</a> <a href="index.html">Villians</a></p></td>
+    </tr>
+    <tr>
+      <td colspan="2"><!-- InstanceBeginEditable name="Banner" --><img src="../images/banners/banner-villains.jpg" width="950" height="150" alt=""/><!-- InstanceEndEditable --></td>
+    </tr>
+    <tr>
+      <td><p>&nbsp;</p>
+        
+        <table>
+          <tr>
+            <td><a href="1-daleks.html">Daleks</a></td>
+          </tr>
+          <tr>
+            <td><a href="2-cyberman.html">Cyberman</a></td>
+          </tr>
+          <tr>
+            <td><a href="3-the-master.html">The Master</a></td>
+          </tr>
+          <tr>
+            <td><a href="4-lady-cassandra.html">Lady Cassandra</a></td>
+          </tr>
+          <tr>
+            <td><a href="5-davros.html">Davros</a></td>
+          </tr>
+          <tr>
+            <td><a href="6-weeping-angels.html">Weeping Angels</a></td>
+          </tr>
+        </table>
+        </td>
+      <td>
+        <div class="doctor-who-content">
+          <!-- InstanceBeginEditable name="Content Area" -->
       <h1>Lady Cassandra</h1>
       <p>Portrayed by <b>Zoe Wanamaker</b></p>
       <p><img src="../images/the-villians/lady-cassandra.jpg" width="300" height="300" alt=""/>Lady Cassandra O'Brien.Δ17 (pronounced &quot;dot delta seventeen&quot;), or simply Lady Cassandra, was a former human in the far future. Along with other rich and powerful people of the universe, Cassandra was on Platform One, a space station orbiting Earth in the year 5,000,000,000, set to witness the destruction of the planet by the expansion of the Sun.<br>
@@ -57,9 +59,10 @@
         </p>
       <p>Cassandra, who was probably an aristocrat, was very elitist and &quot;looked down her nose&quot; at the Working-class Rose Tyler, whom she considered &quot;common&quot;.</p>
     <!-- InstanceEndEditable -->
-   </div class="doctor-who-content"> 
-    </td>
-  </tr>
-</table>
+        </div class="doctor-who-content"> 
+      </td>
+    </tr>
+  </table>
+</div>
 </body>
 <!-- InstanceEnd --></html>
